--- a/PFM_V2_MW_001_23Alfa/Juego.html
+++ b/PFM_V2_MW_001_23Alfa/Juego.html
@@ -135,6 +135,9 @@
         <script src="lib/virtualjoystick.js"></script>
         <script src="lib/Camara.js"></script>
         <script src="js/Personaje.js"></script>
+		<script src="js/Produccion.js"></script>
+		<script src="js/Edificios.js"></script>
+		<script src="js/Tropas.js"></script>
 		<script src="js/Ciudad.js"></script>
         <script src="js/funciones.js"></script>
 		<script src="js/funcionesJuego.js"></script>
