--- a/PFM_V2_MW_001_23Alfa/Juego.html
+++ b/PFM_V2_MW_001_23Alfa/Juego.html
@@ -62,6 +62,11 @@
 			<button id="CondicionVictoria" type="button" class="btn btn-success">Victoria Total</button><br>
 			<button id="CondicionDerrota" type="button" class="btn btn-success">Derrota Total</button><br>
 			
+			<button id="Arriba" type="button" class="btn btn-success">▲</button><br>
+			<button id="Abajo" type="button" class="btn btn-success">▼</button><br>
+			<button id="Izquierda" type="button" class="btn btn-success">◄</button><br>
+			<button id="Derecha" type="button" class="btn btn-success">►</button><br>
+			
 		</div>
 		<div id="txt"></div>
 		
