--- a/PFM_V2_MW_001_23Alfa/Juego.html
+++ b/PFM_V2_MW_001_23Alfa/Juego.html
@@ -28,6 +28,7 @@
 			<button id="P1" type="button" class="btn btn-success">Heracleion</button><br>
 			<button id="P2" type="button" class="btn btn-success">Jerusalén</button><br>
 		    <button id="P3" type="button" class="btn btn-success">Constantinopla</button><br>
+			<button id="CargarPar" type="button" class="btn btn-success">Cargar Partida</button><br>
 		    <button id="AtrasP" type="button" class="btn btn-success">Atras</button><br>
 	    	
        
@@ -61,6 +62,7 @@
 			<button id="SimuladorBatalla" type="button" class="btn btn-success">Simular Batalla</button><br>
 			<button id="CondicionVictoria" type="button" class="btn btn-success">Victoria Total</button><br>
 			<button id="CondicionDerrota" type="button" class="btn btn-success">Derrota Total</button><br>
+			<button id="GuardarPar" type="button" class="btn btn-success">Guardar Partida</button><br>
 			
 			<button id="Arriba" type="button" class="btn btn-success">▲</button><br>
 			<button id="Abajo" type="button" class="btn btn-success">▼</button><br>
